syntax = "proto3";
package cheetah.statistics.events;
option csharp_namespace = "Cheetah.Statistics.Events.GRPC";

service Events {
  /**
    Сохранить событие на сервере
   */
  rpc SendEvent(EventRequest) returns (EventResponse);
}

message EventRequest {
  uint64 time = 1;
  map<string, string> labels = 2;
  string value = 3;
}
message EventResponse {

}